# auto-captive-portal

./: Cargo.toml  Cross.toml  README.md  SAMPLE_TESTS.md  TESTS_VERIFICATION.md  TEST_COVERAGE_SUMMARY.md  build.rs  create_service.sh  example.env  install.sh  run_tests.sh  uninstall.sh
.github/: release.yml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.aarch64-unknown-linux-gnu
src/: captive_portal.rs  config.rs  credentials.rs  daemon.rs  error.rs  logging.rs  main.rs  notifications.rs  service.rs  state.rs
