[package]
name = "acp-script"
version = "0.5.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.12.2"
reqwest = { version = "0.12.28", features = ["default-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
keyring = { version = "3.6.3", features = [
    "apple-native",
    "sync-secret-service",
    "windows-native",
] }
dirs = "6.0.0"
thiserror = "2.0.17"
notify-rust = "4.11.7"
log = "0.4.29"
fern = "0.7"
humantime = "2"
console = "0.16.2"
netwatcher = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
eventlog = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }
