[package]
name = "acp-script"
version = "0.8.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.26.0"
reqwest = { version = "0.13.2", features = ["default-tls", "form"] }
tokio = { version = "1.50.0", features = ["full"] }
keyring = { version = "3.6.3", features = [
    "apple-native",
    "sync-secret-service",
    "windows-native",
] }
dirs = "6.0.0"
thiserror = "2.0.18"
notify-rust = "4.12.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
console = "0.16.3"
netwatcher = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
indicatif = "0.18"
anyhow = "1"
clap = { version = "4.6.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
eventlog = "0.4.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.76", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.76", features = ["vendored"] }
